; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/win32/DriverLoading/Application/extr_undoc.c_NtStopDriver.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/win32/DriverLoading/Application/extr_undoc.c_NtStopDriver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [53 x i32] [i32 92, i32 82, i32 101, i32 103, i32 105, i32 115, i32 116, i32 114, i32 121, i32 92, i32 77, i32 97, i32 99, i32 104, i32 105, i32 110, i32 101, i32 92, i32 83, i32 121, i32 115, i32 116, i32 101, i32 109, i32 92, i32 67, i32 117, i32 114, i32 114, i32 101, i32 110, i32 116, i32 67, i32 111, i32 110, i32 116, i32 114, i32 111, i32 108, i32 83, i32 101, i32 116, i32 92, i32 83, i32 101, i32 114, i32 118, i32 105, i32 99, i32 101, i32 115, i32 92, i32 0], align 4
@TRUE = common dso_local global i32 0, align 4
@STATUS_SUCCESS = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [29 x i32] [i32 78, i32 116, i32 85, i32 110, i32 108, i32 111, i32 97, i32 100, i32 68, i32 114, i32 105, i32 118, i32 101, i32 114, i32 32, i32 102, i32 97, i32 105, i32 108, i32 101, i32 100, i32 32, i32 91, i32 37, i32 108, i32 117, i32 93, i32 10, i32 0], align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @NtStopDriver(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %8 = load i32, i32* @MAX_PATH, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %3, align 8
  %11 = alloca i32, i64 %9, align 16
  store i64 %9, i64* %4, align 8
  store i64 -1, i64* %6, align 8
  %12 = call i32 @wcscpy(i32* %11, i8* bitcast ([53 x i32]* @.str to i8*))
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @wcscat(i32* %11, i32 %13)
  %15 = call i32 @RtlInitUnicodeString(i32* %5, i32* %11)
  %16 = load i32, i32* @TRUE, align 4
  %17 = call i64 @SetPrivilege(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %32

19:                                               ; preds = %1
  %20 = call i64 @NtUnloadDriver(i32* %5)
  store i64 %20, i64* %6, align 8
  %21 = load i64, i64* %6, align 8
  %22 = load i64, i64* @STATUS_SUCCESS, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %29

24:                                               ; preds = %19
  %25 = load i64, i64* %6, align 8
  %26 = call i32 @RtlNtStatusToDosError(i64 %25)
  store i32 %26, i32* %7, align 4
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @wprintf(i8* bitcast ([29 x i32]* @.str.1 to i8*), i32 %27)
  br label %29

29:                                               ; preds = %24, %19
  %30 = load i32, i32* @FALSE, align 4
  %31 = call i64 @SetPrivilege(i32 %30)
  br label %32

32:                                               ; preds = %29, %1
  %33 = load i64, i64* %6, align 8
  %34 = load i64, i64* @STATUS_SUCCESS, align 8
  %35 = icmp eq i64 %33, %34
  %36 = zext i1 %35 to i32
  %37 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %37)
  ret i32 %36
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @wcscpy(i32*, i8*) #2

declare dso_local i32 @wcscat(i32*, i32) #2

declare dso_local i32 @RtlInitUnicodeString(i32*, i32*) #2

declare dso_local i64 @SetPrivilege(i32) #2

declare dso_local i64 @NtUnloadDriver(i32*) #2

declare dso_local i32 @RtlNtStatusToDosError(i64) #2

declare dso_local i32 @wprintf(i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
